2008-05-12  Guillem Jover  <guillem@debian.org>

	* src/help.c (do_script): Expand 'maint' to 'maintainer' in string.
	(vmaintainer_script_installed): Mark string for translation. Change
	strings so that they get merged by gettext with similar ones.
	(maintainer_script_new): Likewise.

2008-05-12  Guillem Jover  <guillem@debian.org>

	* dselect/method.cc: Include <dpkg-priv.h>. Use setup_subproc_signals
	and cu_subproc_signals instead of cu_restoresignals and duped code
	in falliblesubprocess.
	* lib/Makefile.am (libdpkg_a_SOURCES): Add 'subproc.c'.
	* ib/dpkg-priv.h (setup_subproc_signals): New prototype.
	(cu_subproc_signals): Likewise.
	* src/help.c: Include <dpkg-priv.h> and stop including <signal.h>.
	(cu_restorescriptsignals, script_catchsignals): Move to ...
	* lib/subproc.c (cu_subproc_signals, setup_subproc_signals): ... here.
	New file.

2008-05-12  Guillem Jover  <guillem@debian.org>

	* lib/Makefile.am (libdpkg_a_SOURCES): Add 'dpkg-priv.h' and 'path.c'.
	* lib/dpkg-priv.h: New file.
	* lib/path.c: Likewise.

2008-05-11  Pierre Habouzit  <madcoder@debian.org>

	* lib/showpkg.c (show1package): Use %zd instead of %d in sprintf()
	call with a size_t parameter.

2008-05-11  Pierre Habouzit  <madcoder@debian.org>

	* scripts/update-alternatives.pl: add a --query option that works like
	--display but outputs a machine parseable rfc822-like output.
	* man/update-alternatives.8: document that new option, and the
	associated format.

2008-05-05  Raphael Hertzog  <hertzog@debian.org>

	* scripts/dpkg-gensymbols.pl: Do not accept empty parameters for
	-v,  -P and -e.

2008-05-05  Raphael Hertzog  <hertzog@debian.org>

	* scripts/dpkg-shlibdeps.pl: Include the format of the desired
	library in the "library not found" error message.

2008-05-02  Guillem Jover  <guillem@debian.org>

	* scripts/update-alternatives.pl: Do not suggest manually changing
	the alternative symlinks on verbose mode.

2008-04-29  Guillem Jover  <guillem@debian.org>
