@@ -1,5 +1,10 @@
 2008-05-12  Guillem Jover  <guillem@debian.org>
 
+	* scripts/dpkg-gencontrol.pl ($package_type): Rename to ...
+	($pkg_type): ... this, for uniformity.
+
+2008-05-12  Guillem Jover  <guillem@debian.org>
+
 	* src/help.c (do_script): Expand 'maint' to 'maintainer' in string.
 	(vmaintainer_script_installed): Mark string for translation. Change
 	strings so that they get merged by gettext with similar ones.
